feat: add realTime result